# rules_kotlin

kotlin/: repositories.bzl
kotlin_native/: repositories.bzl
kotlin_native/internal/: impl.bzl
src/main/protobuf/: kotlin_model.proto
src/main/starlark/core/repositories/: bzlmod_impl.bzl  bzlmod_setup.bzl  bzlmod_setup.release.bzl  initialize.bzl  initialize.release.bzl  versions.bzl
src/main/starlark/core/repositories/kotlin_native/: artifacts.bzl  capabilities_2.0.bzl.com_github_jetbrains_kotlin.bazel
