# Copyright 2023 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
KOTLIN_OPTS = [
    "-Jcp",
    "-Jclasspath",
    "-Jp",
    "-Jd",
    "-g",
    "-enable-assertions",
    "-friend-modules",
    "-generate-no-exit-test-runner",
    "-generate-test-runner",
    "-generate-worker-test-runner",
    "-include-binary",
    "-library",
    "-library-version",
    "-linker-options",
    "-list-targets",
    "-entry",
    "-manifest",
    "-memory-model",
    "-native-library",
    "-no-default-libs",
    "-no-endorsed-libs",
    "-nomain",
    "-nopack",
    "-nostdlib",
    "-opt",
    "-output",
    "-produce",
    "-repo",
    "-linker-option",
    "-target",
    "-Werror",
    "-api-version",
    "-kotlin-home"
    "-language-version",
    "-nowarn",
    "-opt-in",
    "-progressive",
    "-script",
    "-verbose",
    "-version",
]
